--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,9 @@
     <nav>
       <ul>
         <li><a href="/">home</a></li>
-        <li><a href="/info">info</a></li>
+        <li><a href="/blog">blog</a></li>
         <li><a href="/github">github</a></li>
+        <li><a href="/info">info</a></li>
       </ul>
     </nav>
     <div class="container">
