--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,19 +9,18 @@
       <ul>
         <li><a href="/">home</a></li>
         <li><a href="/blog">blog</a></li>
-        <li><a href="/github">github</a></li>
-        <li><a href="/info">info</a></li>
+        <li><a href="https://github.com/devinrm">github</a></li>
       </ul>
     </nav>
     <div class="container">
 
       {{ content }}
 
-    </div><!-- /.container -->
+    </div>
     <footer>
       <ul>
         <li><a href="mailto:devin.morgenstern@gmail.com">email</a></li>
-        <li><a href="https://github.com/devinrm">github.com/devinrm</a></li>
+        <li><a href="https://twitter.com/devinrm_">twitter</a></li>
       </ul>
     </footer>
   </body>
