--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
         <li><a href="/">home</a></li>
         <li><a href="/blog">blog</a></li>
         <li><a href="https://github.com/devinrm">github</a></li>
-        <li><a href="/books">books</a></li>
+        <li><a href="/reading-list">reading list</a></li>
       </ul>
     </nav>
     <div class="container">
