--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,5 +25,9 @@
         <li><a href="https://twitter.com/devinrm_">twitter</a></li>
       </ul>
     </footer>
+    <div class="left"></div>
+    <div class="right"></div>
+    <div class="top"></div>
+    <div class="bottom"></div>
   </body>
 </html>
