--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,14 @@ ul.posts li {
   list-style: none;
 }
 
+.post-title {
+  margin-bottom: 3px;
+}
+
+.post-date {
+  margin-bottom: 5px;
+}
+
 @-ms-viewport {
   width: device-width;
 }
