Make the links a11y

--- a/css/main.css
+++ b/css/main.css
@@ -67,11 +67,11 @@ footer ul li {
 
 a {
   color: #757575;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 a:hover {
-  text-decoration: underline;
+  font-weight: 700;
 }
 
 h1 {
