Make the list style less boring

--- a/css/main.css
+++ b/css/main.css
@@ -105,6 +105,10 @@ ul.posts li {
   font-size: .375em;
 }
 
+.yearbooks {
+  list-style-type: circle;
+}
+
 @-ms-viewport {
   width: device-width;
 }
