--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     </div>
     <footer>
       <ul>
-        <li><a href="mailto:devin.morgenstern@gmail.com">email</a></li>
+        <li><a href="mailto:devinrm@protonmail.com">email</a></li>
         <li><a href="https://github.com/devinrm">github</a></li>
         <li><a href="https://twitter.com/devinrm_">twitter</a></li>
       </ul>
