New post, updated gems, and syntax highlighting!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ page.title }}</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/rouge.css">
     <link href="https://fonts.googleapis.com/css?family=Mate|Inconsolata" rel="stylesheet" type="text/css">
   </head>
   <body>
