--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,25 +8,28 @@
     <link href="https://fonts.googleapis.com/css?family=Mate|Inconsolata" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><a href="/">home</a></li>
-        <li><a href="/blog">blog</a></li>
-        <li><a href="/reading-list">reading list</a></li>
-      </ul>
-    </nav>
+    <header>
+      <nav>
+        <a href="/">home</a>
+        <a href="/blog">blog</a>
+        <a href="/reading-list">reading list</a>
+      </nav>
+    </header>
+
+    <main>
     <div class="container">
 
       {{ content }}
 
     </div>
+    </main>
+
     <footer>
-      <ul>
-        <li><a href="mailto:devinrm@protonmail.com">email</a></li>
-        <li><a href="https://github.com/devinrm">github</a></li>
-        <li><a href="https://twitter.com/devinrm_">twitter</a></li>
-      </ul>
+      <a href="mailto:devinrm@protonmail.com">email</a>
+      <a href="https://github.com/devinrm">github</a>
+      <a href="https://twitter.com/devinrm_">twitter</a>
     </footer>
+
     <div class="left"></div>
     <div class="right"></div>
     <div class="top"></div>
