--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Mate|Inconsolata" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <div class="skip">
+      <a href="#main-content">skip to main content</a>
+    </div>
     <header>
       <nav>
         <a href="/">home</a>
@@ -16,7 +19,7 @@
       </nav>
     </header>
 
-    <main>
+    <main id="main-content">
     <div class="container">
 
       {{ content }}
