Add some aria-labels for section landmarks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Mate|Inconsolata" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div class="skip">
+    <aside class="skip">
       <a href="#main-content">skip to main content</a>
-    </div>
+    </aside>
     <header>
       <nav>
         <a href="/">home</a>
