--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet" type="text/css" href="/css/rouge.css">
     <link href="https://fonts.googleapis.com/css?family=Mate|Inconsolata" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico">
   </head>
   <body>
     <aside class="skip">
