--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,17 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
-<time class="meta">{{ page.date | date_to_string }}</time>
 
-<article class="post">
-  {{ content }}
-</article>
+<section class="posts">
+  <article>
+    <header>
+      <h2>{{ page.title }}</h2>
+      <p>
+      <time>{{ page.date | date_to_string }}</time>
+      </p>
+    </header>
+    <p>
+    {{ content }}
+    </p>
+  </article>
+</section>
