--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ p {
 }
 
 time {
-  color: #898989;
+  color: #333;
 }
 
 /* Classes */
@@ -73,6 +73,7 @@ time {
   padding: 0px 15px;
 }
 
+.blog-posts,
 .books {
   list-style-type: circle;
 }
@@ -175,7 +176,7 @@ time {
 }
 
 .skip a:focus {
-  color: #000;
+  color: #333;
   height:auto;
   position:static;
   width:auto;
