--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,7 @@ time {
   border-bottom: 1px solid #fff;
   box-shadow: 0px 1px 1px RGBA(4, 25, 54, 0.1);
   left: 0;
+  margin-top: -0.5em;
   position: fixed;
   top: 0;
   transform: rotate(-1deg);
@@ -168,6 +169,11 @@ time {
 .site-header {
   font-size: 1.75em;
   padding: 8px;
+}
+
+.skip {
+  margin-top: 0.5em;
+  padding: 0.5em;
 }
 
 .skip a {
