--- a/css/main.css
+++ b/css/main.css
@@ -15,12 +15,13 @@ a {
 
 a:hover,
 a:focus {
-  color: #0b57f1;
+  color: #5BA481;
+  font-weight: 600;
   text-decoration: underline;
 }
 
 body {
-  color: #333;
+  color: #465458;
   font-family: 'Mate', serif;
   font-size: 1.1em;
   -webkit-font-smoothing: antialiased;
@@ -31,7 +32,7 @@ body {
 h1,
 h2,
 h3 {
-  color: #333;
+  color: #465458;
   font-weight: 600;
   line-height: 1.5;
 }
@@ -60,7 +61,7 @@ p {
 }
 
 time {
-  color: #333;
+  color: #465458;
 }
 
 /* Classes */
@@ -147,7 +148,7 @@ time {
 .nav-bottom nav ul li a:hover,
 .nav-bottom nav ul li a:active,
 .nav-bottom nav ul li a:focus {
-  color: #0b57f1;
+  color: #5BA481;
   text-decoration: underline;
 }
 
@@ -190,7 +191,7 @@ time {
 }
 
 .skip a:focus {
-  color: #333;
+  color: #3366cc;
   height:auto;
   position:static;
   width:auto;
