--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,7 @@ time {
 }
 
 .container {
-  margin: 0 auto;
+  margin: -2.5em auto;
   max-width: 700px;
 }
 
@@ -102,8 +102,9 @@ time {
   background: #fff;
   border-bottom: 1px solid #fff;
   box-shadow: 0px 1px 1px RGBA(4, 25, 54, 0.1);
+  height: 7.5em;
   left: 0;
-  margin-top: -0.5em;
+  padding-top: 1.5em;
   position: fixed;
   top: 0;
   transform: rotate(-1deg);
@@ -165,7 +166,7 @@ time {
 }
 
 .quote {
-  margin-top: 7em;
+  margin-top: 5em;
 }
 
 .site-header {
@@ -176,25 +177,24 @@ time {
 }
 
 .skip {
-  margin-top: 0.5em;
-  padding: 0.5em;
+  padding-left: 2.5em;
 }
 
 .skip a {
   color: rgba(255,255,255,0.75);
-  height:1px;
-  left:-10000px;
-  overflow:hidden;
-  position:absolute;
-  top:auto;
-  width:1px;
+  height: 1px;
+  left: -10000px;
+  overflow: hidden;
+  position: absolute;
+  top: auto;
+  width: 1px;
 }
 
 .skip a:focus {
   color: #3366cc;
-  height:auto;
-  position:static;
-  width:auto;
+  height: auto;
+  position: static;
+  width: auto;
 }
 
 .tolkien a,
