--- a/css/main.css
+++ b/css/main.css
@@ -104,6 +104,7 @@ time {
   box-shadow: 0px 1px 1px RGBA(4, 25, 54, 0.1);
   height: 7.5em;
   left: 0;
+  margin-top: -0.25em;
   padding-top: 1.5em;
   position: fixed;
   top: 0;
