--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet" type="text/css" href="/css/rouge.css">
-    <link href="https://fonts.googleapis.com/css?family=Mate|Inconsolata" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico">
     <title>{{ page.title }}</title>
   </head>
@@ -37,7 +37,7 @@
           <li><a href="https://twitter.com/devinrm_">twitter</a></li>
         </ul>
         <ul>
-          <li>copyright © 2017 devin morgenstern</li>
+          <li class="copyright">copyright © 2017 devin morgenstern</li>
         </ul>
       </nav>
     </footer>
