--- a/css/main.css
+++ b/css/main.css
@@ -10,9 +10,9 @@
 
   html {
     background: linear-gradient(
-    rgba(79, 5, 122, 0.65),
-    rgba(79, 5, 122, 0.65)
-    ), url(/assets/grid.png) no-repeat center center fixed;
+    rgba(214, 110, 110, 0.1),
+    rgba(214, 110, 110, 0.1)
+    ), url(/assets/grid_n.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -52,7 +52,7 @@
   }
 
   body {
-    color: #fff;
+    color: #f5fffe;
     font-family: 'Droid Sans Mono', monospace;
     font-size: 1.1em;
     -webkit-font-smoothing: antialiased;
@@ -63,7 +63,7 @@
   h1,
   h2,
   h3 {
-    color: #fff;
+    color: #f5fffe;
     font-weight: 600;
     line-height: 1.5;
   }
@@ -92,7 +92,7 @@
   }
 
   time {
-    color: #fff;
+    color: #f5fffe;
   }
 
   /* Classes */
@@ -115,7 +115,7 @@
   }
 
   .copyright {
-    color: #000;
+    color: #00ffff;
     font-family: 'damerongrad';
     font-size: .75em;
   }
@@ -133,6 +133,10 @@
     float: left;
     margin: 0 auto;
     max-width: 700px;
+  }
+
+  .nav-bottom {
+    margin-top: 5em;
   }
 
   .nav-top {
@@ -169,7 +173,7 @@
 
   .nav-top nav ul li a,
   .nav-bottom nav ul li a {
-    color: #fff;
+    color: #f5fffe;
     display: block;
     font-family: 'damerongrad';
     line-height: 20px;
@@ -205,7 +209,7 @@
   }
 
   .quote {
-    color: #fff;
+    color: #f5fffe;
     font-family: 'dameronital';
     font-size: 1.15em;
     margin-top: 5em;
@@ -229,7 +233,7 @@
   }
 
   .site-header a {
-    color: #fff;
+    color: #f5fffe;
   }
 
   .site-header a:hover {
