--- a/css/main.css
+++ b/css/main.css
@@ -179,6 +179,7 @@
     color: #f5fffe;
     display: block;
     font-family: 'damerongrad';
+    font-weight: normal;
     line-height: 20px;
     margin-bottom: -1px;
     padding: 15px;
@@ -189,6 +190,7 @@
     color: #f5fffe;
     display: block;
     font-family: 'dameronlaser';
+    font-weight: normal;
     line-height: 20px;
     margin-bottom: -1px;
     padding: 15px;
