--- a/css/main.css
+++ b/css/main.css
@@ -9,78 +9,49 @@
   }
 
   html {
-    background: url(/assets/grid_c.png) no-repeat center center fixed;
-    background-size: cover;
-    -webkit-background-size: cover;
-    -o-background-size: cover;
-  }
-
-  @font-face {
-    font-family: 'dameron';
-    src: url('/assets/dameron.ttf')  format('truetype');
-  }
-
-  @font-face {
-    font-family: 'damerongrad';
-    src: url('/assets/damerongrad.ttf')  format('truetype');
-  }
-
-  @font-face {
-    font-family: 'dameronital';
-    src: url('/assets/dameronital.ttf')  format('truetype');
-  }
-
-  @font-face {
-    font-family: 'dameronlaser';
-    src: url('/assets/dameronlaser.ttf')  format('truetype');
+    background-color: #222;
   }
 
   a {
     color: #6fff00;
-    font-weight: bold;
     text-decoration: none;
   }
 
   a:hover {
-    color: #fff60d;
-    font-weight: 600;
+    color: #f89400;
     text-decoration: underline;
   }
 
   a:focus {
-    font-weight: 600;
-    padding: 0.25em;
+    color: #f89400;
+    padding: 0.25rem;
     outline: 3px solid rgba(111, 255, 0, 0.6);
   }
 
   body {
-    color: #f5fffe;
+    color: #fefefe;
     font-family: 'Droid Sans Mono', monospace;
-    font-size: 1.1em;
-    -webkit-font-smoothing: antialiased;
-    line-height: 1.6;
+    font-size: 1.5rem;
     margin: 0;
   }
 
   h1,
   h2,
   h3 {
-    color: #f5fffe;
-    font-weight: 600;
-    line-height: 1.5;
+    color: #fefefe;
+    font-family: 'Inconsolata', monospace;
   }
 
   h1 {
-    font-size: 2.5em;
+    font-size: 3.0rem;
   }
 
   h2 {
-    font-size: 2em;
+    font-size: 2.5rem;
   }
 
   li {
-    line-height: 1.75em;
-    margin-bottom: 0.5em;
+    margin-bottom: 1.5rem;
   }
 
   main {
@@ -89,42 +60,36 @@
     padding: 0 15px;
   }
 
-  p {
-    font-size: 1em;
-  }
-
   time {
-    color: #f5fffe;
+    color: #fefefe;
+    font-size: 1rem;
   }
 
   /* Classes */
 
   .blog,
-  .reading-list {
-    display: flex;
-    font-family: 'dameronital';
-    margin: 150px 0 0;
+  .books {
+    margin: 12.5rem 0 0;
     padding: 0px 15px;
   }
 
   .blog-posts,
-  .books {
+  .book {
     list-style-type: circle;
   }
 
   .container {
-    margin: -2.5em auto;
+    margin: -2.5rem auto;
     max-width: 700px;
   }
 
   .copyright {
     color: #00ffff;
-    font-family: 'damerongrad';
-    font-size: .75em;
+    font-size: 0.75rem;
   }
 
   .intro {
-    align-items: center;
+    align-itrems: center;
     display: flex;
     height: 50vh;
     margin: 50px 0 0;
@@ -139,15 +104,15 @@
   }
 
   .nav-bottom {
-    margin-top: 12em;
+    margin-top: 12rem;
   }
 
   .nav-top {
     box-shadow: 0px 1px 1px RGBA(4, 25, 54, 0.1);
-    height: 8em;
+    height: 8rem;
     left: 0;
-    margin-top: -0.5em;
-    padding-top: 2em;
+    margin-top: -0.5rem;
+    padding-top: 2rem;
     position: fixed;
     top: 0;
     width: 100%;
@@ -175,24 +140,23 @@
   }
 
   .nav-top nav ul li a {
-    color: #f5fffe;
+    color: #fefefe;
     display: block;
-    font-family: 'damerongrad';
-    font-weight: normal;
-    line-height: 20px;
+    font-family: 'Inconsolata', monospace;
+    font-size: 2rem;
+    line-height: 2rem;
     margin-bottom: -1px;
-    padding: 15px;
+    padding: 1rem;
     text-decoration: none;
   }
 
   .nav-bottom nav ul li a {
-    color: #f5fffe;
+    color: #fefefe;
     display: block;
-    font-family: 'dameronlaser';
-    font-weight: normal;
-    line-height: 20px;
+    font-size: 1.5rem;
+    line-height: 1.5rem;
     margin-bottom: -1px;
-    padding: 15px;
+    padding: 1rem;
     text-decoration: none;
   }
 
@@ -222,32 +186,24 @@
     padding: 0px 15px;
   }
 
+  .post-title {
+    line-height: 3rem;
+  }
+
   .quote {
-    color: #f5fffe;
-    font-family: 'dameronital';
-    font-size: 1.15em;
-    margin-top: 5em;
-  }
-
-  .quote a {
-    font-family: 'dameron';
-    font-size: .75em;
-  }
-
-  .quote span {
-    font-family: 'dameron';
-    font-size: .75em;
+    color: #fefefe;
+    font-family: 'Droid Sans Mono', monospace;
+    font-size: 1.3rem;
+    margin-top: 20rem;
   }
 
   .site-header {
-    font-family: 'dameron';
-    font-size: 1.75em;
     margin-bottom: 0;
-    padding: 8px;
+    padding: 0.5rem;
   }
 
   .site-header a {
-    color: #f5fffe;
+    color: #fefefe;
   }
 
   .site-header a:hover {
@@ -260,7 +216,7 @@
   }
 
   .skip {
-    padding-left: 2.5em;
+    padding-left: 2.5rem;
   }
 
   .skip a {
@@ -275,6 +231,7 @@
 
   .skip a:focus {
     outline: 3px solid rgba(111, 255, 0, 0.6);
+    color: #f89400;
     height: auto;
     position: static;
     width: auto;
