--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet" type="text/css" href="/css/rouge.css">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico">
     <title>{{ page.title }}</title>
@@ -15,12 +16,12 @@
         <a href="#main-content">skip to main content</a>
       </aside>
       <div class="container">
-        <h1 class="site-header"><a href="/">{{ site.title }}</a></h1>
+        <h1 class="site-header"><a href="/">{{ site.title }}</a></h2>
         <nav>
           <ul>
             <li><a href="/">home</a></li>
             <li><a href="/blog">blog</a></li>
-            <li><a href="/reading-list">reading list</a></li>
+            <li><a href="/books">books</a></li>
           </ul>
         </nav>
       </div>
