--- a/css/rouge.css
+++ b/css/rouge.css
@@ -1,5 +1,5 @@
 .highlight .hll { background-color: #333333 }
-.highlight  { background: #111111; color: #ffffff }
+.highlight  { color: #ffffff }
 .highlight .c { color: #008800; font-style: italic; background-color: #0f140f } /* Comment */
 .highlight .err { color: #ffffff } /* Error */
 .highlight .esc { color: #ffffff } /* Escape */
@@ -14,7 +14,7 @@
 .highlight .cm { color: #008800; font-style: italic; background-color: #0f140f } /* Comment.Multiline */
 .highlight .cp { color: #ff0007; font-weight: bold; font-style: italic; background-color: #0f140f } /* Comment.Preproc */
 .highlight .cpf { color: #008800; font-style: italic; background-color: #0f140f } /* Comment.PreprocFile */
-.highlight .c1 { color: #008800; font-style: italic; background-color: #0f140f } /* Comment.Single */
+.highlight .c1 { color: #008800; font-style: italic; } /* Comment.Single */
 .highlight .cs { color: #008800; font-style: italic; background-color: #0f140f } /* Comment.Special */
 .highlight .gd { color: #ffffff } /* Generic.Deleted */
 .highlight .ge { color: #ffffff } /* Generic.Emph */
