--- a/css/main.css
+++ b/css/main.css
@@ -110,8 +110,9 @@
   }
 
   .nav-top {
+    background-color: #222;
     box-shadow: 0px 1px 1px RGBA(4, 25, 54, 0.1);
-    height: 8rem;
+    height: 8.5rem;
     left: 0;
     margin-top: -0.5rem;
     padding-top: 2rem;
