--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,8 @@
         <nav>
           <ul>
             <li><a href="/">home</a></li>
-            <li><a href="/blog">blog</a></li>
-            <li><a href="/books">books</a></li>
+            <li><a href="/blog" id="blog-link">blog</a></li>
+            <li><a href="/books" id="book-link">books</a></li>
           </ul>
         </nav>
       </div>
@@ -43,5 +43,16 @@
       </nav>
     </footer>
     </main>
+    <script>
+      function urlHighlight(urlLoc, id) {
+        const currentUrl = new URL(window.location.href);
+        if (currentUrl.href.includes(urlLoc)) {
+          const elm = document.getElementById(id);
+          elm.className = 'selected';
+        }
+      };
+      urlHighlight('blog', 'blog-link');
+      urlHighlight('books', 'book-link');
+    </script>
   </body>
 </html>
