--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
         <h1 class="site-header"><a href="/">{{ site.title }}</a></h1>
         <nav>
           <ul>
-            <li><a href="/">home</a></li>
+            <li><a href="/" id="home-link">home</a></li>
             <li><a href="/blog" id="blog-link">blog</a></li>
             <li><a href="/books" id="book-link">books</a></li>
           </ul>
@@ -46,13 +46,14 @@
     <script>
       function urlHighlight(urlLoc, id) {
         const currentUrl = new URL(window.location.href);
-        if (currentUrl.href.includes(urlLoc)) {
+        if (currentUrl.pathname === urlLoc) {
           const elm = document.getElementById(id);
           elm.className = 'selected';
         }
       };
-      urlHighlight('blog', 'blog-link');
-      urlHighlight('books', 'book-link');
+      urlHighlight('/', 'home-link');
+      urlHighlight('/blog/', 'blog-link');
+      urlHighlight('/books/', 'book-link');
     </script>
   </body>
 </html>
