--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,10 +46,7 @@
     <script>
       function urlHighlight(urlLoc, id) {
         const currentUrl = new URL(window.location.href);
-        if (currentUrl.pathname === urlLoc) {
-          const elm = document.getElementById(id);
-          elm.className = 'selected';
-        }
+        if (currentUrl.pathname === urlLoc) document.getElementById(id).className = 'selected';
       };
       urlHighlight('/', 'home-link');
       urlHighlight('/blog/', 'blog-link');
