Rouge is just broken

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,5 +45,6 @@
       </nav>
     </footer>
     </main>
+    <script type="text/javascript" src="/assets/urlHighlighter.js"></script>
   </body>
 </html>
